--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,7 @@
     "description": "Netflex logging",
     "type": "library",
     "license": "MIT",
-    "keywords": [
-        "sdk",
-        "netflex",
-        "framework"
-    ],
+    "keywords": ["sdk", "netflex", "framework"],
     "homepage": "https://github.com/netflex-sdk/log",
     "authors": [
         {
@@ -32,10 +28,5 @@
     "require": {
         "illuminate/log": "^8.0",
         "php": "^7.4|^8.0"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "5.0.x-dev"
-        }
     }
 }
