--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,10 @@
     "require": {
         "illuminate/log": "^8.0",
         "php": "^7.4|^8.0"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "4.1.x-dev"
+        }
     }
 }
