--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
         "sort-packages": true
     },
     "require": {
-        "illuminate/log": "^8.0",
-        "php": "^7.4|^8.0"
+        "illuminate/log": "^12.0",
+        "php": "^8.2"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "4.33.x-dev"
+            "dev-master": "6.0.x-dev"
         }
     }
 }
